proxmox-mini-journalreader (1.1-1) pve pmg; urgency=medium

  * bump for Debian buster

 -- Proxmox Support Team <support@proxmox.com>  Tue, 21 May 2019 19:19:10 +0200

proxmox-mini-journalreader (1.0-1) unstable; urgency=medium

  *  initial package release

 -- Proxmox Support Team <support@proxmox.com>  Wed, 15 May 2019 11:28:08 +0200