@@ -1,3 +1,9 @@
+proxmox-mini-journalreader (1.1-1rpve1) pve pmg; urgency=medium
+
+  * Fixed signed/unsigned char
+
+ -- Tim <tim.j.wilkinson@gmail.com>  Wed, 05 May 2021 20:19:59 -0700
+
 proxmox-mini-journalreader (1.1-1) pve pmg; urgency=medium
 
   * bump for Debian buster
